# 2026_nvhackathon

./: .gitignore  LICENSE  README.md  madis_ifs_wf_forlh.ipynb  pyproject.toml
bias_correction/: point_correction_hrrr_v0.ipynb  point_correction_ifs_v1_prelim.ipynb  point_correction_ifs_v2.ipynb
cowy_point_correction/: README.md  pyproject.toml
cowy_point_correction/cofigs/: ifs_v1.yaml
cowy_point_correction/configs/: ifs_v1.yaml  ifs_v1_small.yaml
cowy_point_correction/cowy/: __init__.py
cowy_point_correction/cowy/data/: dataset.py  qc.py  spatial.py
cowy_point_correction/cowy/evaluation/: metrics.py  plots.py
cowy_point_correction/cowy/models/: normalization.py  point_model.py
cowy_point_correction/cowy/physics/: lapse_rate.py
cowy_point_correction/cowy/training/: callbacks.py  datamodule.py
cowy_point_correction/scripts/: evaluate.py  preflight_paths.sh  prepare_data.py  self_check_script.py  temp.py  train.py
kriging/: example01_rk_basic.ipynb  process_points.py  process_rasters.py  run_kriging.py
validation/: madis_ifs_val_ex.ipynb  metrics.py  model_eval.ipynb  plotting.py  processing.py
